<resources>
    <string name="app_name">Primeros pasos</string>
    <string name="text_string">Esto es una prueba de mi primer string</string>
    <string name="message">Hello message</string>
    <string name="message2">Hola que hace</string>
    <string name="bart">BART</string>
    <string name="moe">MOE</string>
    <string name="homero">HOMERO</string>
    <string name="lisa">LISA</string>
    <string name="select">Select</string>
    <string name="mostrar">MOSTRAR</string>
    <string name="vivo">Vivo</string>
    <string name="gemaText">¿Una gema aparece en su pélicula?</string>
    <string name="faltaFrase">Te falta una frase de</string>
    <string name="nombre">Nombre</string>
    <string name="frase">Frase</string>
    <string name="emailVacio">Email Vacio</string>
    <string name="passwordVacio">Password vacio</string>
    <string name="errorEmailInvalido">Error email invalido</string>
    <string name="camposVacios" translatable="false">Los campos no pueden estar vacios</string>
    <string name="errorPasswordInvalido">Error password invalido</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">logout</string>
    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="yellow">YELLOW</string>
    <string name="apellidos">Apellidos</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="emptyString">Campo vacio</string>
    <string name="datos">Datos</string>
    <string name="telaraña">Telaraña</string>
    <string name="marvel">Marvel</string>
    <string name="address">Dirección</string>
    <string name="name">Nombre</string>
    <string name="end">Finalizar</string>
    <string name="empty_fields">Empty fields</string>
    <string name="empty_name">Empty name</string>
    <string name="empty_address">Empty address</string>
    <string name="empty_input_message">Empty input message</string>
    <string name="insert_a_message_to_send">Insert a message to send</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="zoom">Zoom</string>
    <string name="clockwise">Clockwise</string>
    <string name="fade">Fade</string>
    <string name="blink">Blink</string>
    <string name="move">Move</string>
    <string name="slide">Slide</string>
    <string-array name="country_arrays">
        <item>México🇲🇽</item>
        <item>Malaysia 🇲🇾</item>
        <item>United States 🇺🇸</item>
        <item>Indonesia 🇮🇩</item>
        <item>France 🇫🇷</item>
        <item>Italy 🇮🇹</item>
        <item>Singapore 🇸🇬</item>
        <item>New Zealand 🇳🇿</item>
    </string-array>
    <string-array name="avengers_array">
        <item>Thor</item>
        <item>Capitan America</item>
        <item>Iron Man</item>
        <item>Spider-Man</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
