<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activitys.ProfileActivity">
    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/ic_menu"
        android:title="action_notification"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/item1"
                android:title="@string/profile"
                android:icon="@drawable/ic_perfil"
                android:orderInCategory="1"/>
            <item android:id="@+id/item2"
                android:title="@string/settings"
                android:icon="@drawable/ic_settings"
                android:orderInCategory="2"/>
            <item android:id="@+id/item3"
                android:title="@string/logout"
                android:icon="@drawable/ic_logout"
                app:showAsAction="ifRoom|withText"
                android:orderInCategory="3"/>
        </menu>
    </item>

</menu>